# typederror

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  features.yml  minimal.yml  msrv.yml  style.yml  test.yml
src/: error.rs  lib.rs  macros.rs  terror.rs
