[package]
name = "typederror"
version = "0.2.1"
edition = "2021"
authors = ["Steve Pryde <steve@stevepryde.com>"]
description = "A wrapper around anyhow that allows for a primary error type"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/stevepryde/typederror"
repository = "https://github.com/stevepryde/typederror"
documentation = "https://docs.rs/typederror"

readme = "README.md"
keywords = ["error", "error-handling"]
categories = ["rust-patterns"]

[dependencies]
anyhow = "1"

[dev-dependencies]
assert_matches = "1"
thiserror = "1"
